recepie 2.0 - added random sugguestion

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="name" id="one">chicken</button>
             <button class="name" id="two">beef</button>
             <button class="name" id="three">olive oil</button>
-            <button class="name" id="four">avocado</button>
+            <button class="name" id="four">be lucky ;)</button>
         </div>
         <secion class="content"> </secion>
     </main>
