refactored: 1) toggle section 2)smooth fadein-fadeout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Generator</title>
 
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles/styles.css" />
     <link />
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet" />
 </head>
@@ -33,7 +33,10 @@
             <button class="name" id="three">olive oil</button>
             <button class="name" id="four">lucky ;)</button>
         </div>
-        <secion class="content"> </secion>
+        <section class="content">
+        </section>
+
+
     </main>
 
     <!-- Footer -->
@@ -44,7 +47,9 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script src="script.js"></script>
+
 </body>
 
 </html>
