--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/styles/styles.css" />
     <link />
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" href="./images/favicon.ico">
 </head>
 
 <body>
